Exclude test files in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,5 @@
     "strict": true
   },
   "include": ["src/**/*"],
-  "exclude": ["./dist/**/*"]
+  "exclude": ["./dist/**/*", "./src/*.test.ts"]
 }
