--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@classius/crypt",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "TypeScript Encrypt and Decrypt a value easily without dependencies",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest",
-    "build": "tsc"
+    "build": "tsc",
+    "publish": "tsc && publish"
   },
   "repository": {
     "type": "git",
