--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "@classius/crypt",
-  "version": "1.1.4",
+  "name": "@francolloveras/crypt",
+  "version": "1.2.4",
   "description": "TypeScript Encrypt and Decrypt a value easily without dependencies",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest",
-    "build": "tsc",
-    "publish": "tsc && npm publish"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/classiuz/crypt"
+    "url": "https://github.com/francolloveras/crypt"
   },
-  "author": "ClaSSius",
+  "author": "Franco Lloveras",
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "29.5.12",
